remove comments from iceland posts

--- a/content/post/2019-12-27-iceland-day-1-landing-city-tour.Rmd
+++ b/content/post/2019-12-27-iceland-day-1-landing-city-tour.Rmd
@@ -9,6 +9,7 @@ tags:
   - travel
   - iceland
 thumbnail: https://i.imgur.com/KTSCV07.jpg
+disable_comments: true
 ---
 
 My parents, Britney and I landed in Reykjavik at 630AM. We’d taken an eight-and-a-half-hour overnight flight from Seattle. It was dark when we stepped off the plane and would remain dark until 11AM (in wintertime Iceland only gets 4-6 hours of sunlight a day).
@@ -23,9 +24,9 @@ After a few missed turns we eventually made it to our apartment building. Britne
 
 My parents’ room was four floors below in the relatively spacious basement. Mom took a nap while dad, Britney, and I wandered the streets for food. It was still early, most places were closed but we eventually stumbled into a boutique hotel’s breakfast buffet.  I had 5 carrot-beat shots, 4 cups of Skyr (Icelandic yogurt) parfaits, and an array of fermented cod (some of which I loved, some of which I *really* did not) and smoked salmon.  
 
-Britney and I planned on a 12PM "free" (tip based) walking tour but took a nap that lasted until 12:15PM so ended-up at the 2pm tour. It was still wet outside when we left. The wind and rain at times reminded us of that from our respective hometowns: it could be temperate, polite but passive aggressive, almost like in Seattle; at other times it whipped at your face and made you beg for mercy, like in Chicago.
+Britney and I planned on a 12PM "free" (tip based) walking tour but took a nap that lasted until 12:15PM so ended-up at the 2pm tour. It was still wet outside when we left. The wind and rain at times reminded us of that from our respective hometowns: it could be temperate, polite but almost passive aggressive, like in Seattle; at other times it whipped at your face and made you beg for mercy, as in Chicago.
 
-On our walk to the Althingi Parliament House (the tour meeting point) we passed a 20-foot black metal feline structure with piercing red eyes and great white-yellow teeth. It looked as though it had been born in Hell and sprang from one of Iceland’s many volcanoes. From our guide we learned that it was a sculpture of the ‘Christmas Cat’ who, legend has it, would devour people that didn’t get new clothes for the holidays^[Naturally, the sculpture was located in the main shopping center, doing its best to compel consumerism.]. The Christmas Cat also worked as an agent of the giantess Gryla, an Icelandic (and murderous) version of Santa Claus, who snatched bad little children up to a cave and cooked them into a stew. Throughout the trip, whenever I got on Britney’s nerves she’d threaten she was going to call Gryla to come and get me. 
+On our walk to the Althingi Parliament House (the tour meeting point) we passed a 20-foot black metal feline structure with piercing red eyes and great yellow teeth. It looked as though it had been born in Hell and sprang from one of Iceland’s many volcanoes. From our guide we learned that it was a sculpture of the ‘Christmas Cat’ who, legend has it, would devour people that didn’t get new clothes for the holidays^[Naturally, the sculpture was located in the main shopping center, doing its best to compel consumerism.]. The Christmas Cat also worked as an agent of the giantess Gryla, an Icelandic (and murderous) version of Santa Claus, who snatched bad little children up to a cave and cooked them into a stew. Throughout the trip, whenever I got on Britney’s nerves she’d threaten she was going to call Gryla to come and get me. 
 
 ![The Christmas Cat and I](https://i.imgur.com/KTSCV07.jpg)
 
