--- a/content/post/2019-12-29-iceland-day-3-thingvellier-disaster.Rmd
+++ b/content/post/2019-12-29-iceland-day-3-thingvellier-disaster.Rmd
@@ -9,13 +9,14 @@ tags:
   - travel
 slug: iceland-day-3-thingvellier-disaster
 thumbnail: https://i.imgur.com/RjHIkAO.jpg
+disable_comments: true
 ---
 
 We slept in a little later this morning (930AM), had Skyr parfaits with mom and dad for breakfast and more croissants from Brauð & Co. We drove back to the UNESCO World heritage site, Thingvellier, that we’d attempted to visit the morning before. We arrived close to sunrise (there was no creepy white pickup truck in the parking lot this time).  
 
 The drive out was beautiful and easy. The browning grass and gnarled branches by the road seemed almost a pastoral desert (except for all the wetness). The dim sunlight softened the jagged lines of volcanoes that could now be seen in the distance. The foreign space we had driven through in fear and darkness 26 hours prior now felt almost inviting. 
 
-Thingvellier is important for many reasons, most of which have to do with different kinds of *meetings*. It is where the North American and Eurasian plates meet to create stunning cervices and rock formations. It's where ancient Icelandic village leaders met for inter-tribal gatherings and formed some of the earliest representative(-ish) government structures in Europe. It is where Iceland’s independence was signed after the second World War. Thingvellier’s stunning beauty makes it unsurprising that the site has served as a significant location across much of Iceland’s history.  
+Thingvellier is important for many reasons, most of which have to do with different kinds of *meetings*. It is where the North American and Eurasian plates meet to create stunning crevices and rock formations. It's where ancient Icelandic village leaders met for inter-tribal gatherings and formed some of the earliest representative(-ish) government structures in Europe. It is where Iceland’s independence was signed after the second World War. Thingvellier’s stunning beauty makes it unsurprising that the site has served as a significant location across much of Iceland’s history.  
 
 ![Where American and Eurasian continental plates meet](https://i.imgur.com/IMWiLed.jpg)
 
