--- a/content/post/2019-12-28-iceland-day-2-golden-circle-snowmobiling.Rmd
+++ b/content/post/2019-12-28-iceland-day-2-golden-circle-snowmobiling.Rmd
@@ -9,6 +9,7 @@ tags:
   - iceland
   - travel
 thumbnail: https://i.imgur.com/yTgpSWq.jpg
+disable_comments: true
 ---
 
 I grabbed an assortment of croissants from Brauð & Co, half a block from our apartment. We were on the road headed East by 7:05AM.  
