--- a/content/post/2019-12-30-iceland-day-4-southeast-coast-diamond-beach.Rmd
+++ b/content/post/2019-12-30-iceland-day-4-southeast-coast-diamond-beach.Rmd
@@ -9,6 +9,7 @@ tags:
   - iceland
   - travel
 thumbnail: https://i.imgur.com/jGtK66T.jpg
+disable_comments: true
 ---
 
 Britney and I awoke several times in the night to the frigid cold. We would run across the street to a patch of trees where we could relieve ourselves and get away from the streetlights. I looked up to the stars and the clear night sky clinging faintly to a hope that whatever damage might be done to the car, it was all part of a plan for us to be at this exact point. For what? – maybe to see a brilliant aurora. “What’s an engine compared to a bucket-list experience?” I’d try to convince myself. The stars were beautiful but there were no dancing lights this night to ease my conscience. 
