--- a/content/post/2019-12-31-iceland-day-5-blue-lagoon-new-year-s-eve.Rmd
+++ b/content/post/2019-12-31-iceland-day-5-blue-lagoon-new-year-s-eve.Rmd
@@ -9,6 +9,7 @@ tags:
   - travel
   - iceland
 thumbnail: https://i.imgur.com/B3RhKj5.jpg
+disable_comments: true
 ---
 
 We were out the door by 7:45AM and headed for the Blue Lagoon (where my parents had offered to treat us for the day). The regular Blue Lagoon pool had sold-out of tickets. Instead, we were ‘forced’ to get tickets to the Blue Lagoon *Spa Retreat* – setting the stage for the most luxurious four hours of my life.
