--- a/content/post/2020-05-31-tidy-2-way-column-combinations.Rmd
+++ b/content/post/2020-05-31-tidy-2-way-column-combinations.Rmd
@@ -415,6 +415,24 @@ AmesHousing::make_ames() %>%
 
 Actual gif was created by embedding above code into a presentation and exporting it as a gif and then making a few minor edits.
 
+## Tweets
+
+A few tweets as documentation of thinking.
+
+*Original tweet + R bloggers tweet:*
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">What is your <a href="https://twitter.com/hashtag/tidyverse?src=hash&amp;ref_src=twsrc%5Etfw">#tidyverse</a> (or other <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> ) approach for doing arbitrary pairwise operations across variables? Mine is frequently something like:<br><br>I. nest...<br>II. expand combos... <br>III. filter...<br>IV. map fun(s)...<br>...<br><br>I wrote a post walking through this: <a href="https://t.co/xRnRf5yh3m">https://t.co/xRnRf5yh3m</a> <a href="https://t.co/Zvxey2gm3H">pic.twitter.com/Zvxey2gm3H</a></p>&mdash; Bryan Shalloway (@brshallo) <a href="https://twitter.com/brshallo/status/1271194908477591553?ref_src=twsrc%5Etfw">June 11, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Tidy Pairwise Operations {<a href="https://t.co/mI5r2e5ttN">https://t.co/mI5r2e5ttN</a>} <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> <a href="https://twitter.com/hashtag/DataScience?src=hash&amp;ref_src=twsrc%5Etfw">#DataScience</a></p>&mdash; R-bloggers (@Rbloggers) <a href="https://twitter.com/Rbloggers/status/1307007573611155456?ref_src=twsrc%5Etfw">September 18, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+*Tweet with link to gist of other example applying this approach:*
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://twitter.com/W_R_Chase?ref_src=twsrc%5Etfw">@W_R_Chase</a> alludes to using `expand()` for a solution but takes a different approach. I wrote a short gist that fleshes in what a `tidyr::expand()` approach to this problem could look like: <a href="https://t.co/agloPgJR1r">https://t.co/agloPgJR1r</a> (2/3)</p>&mdash; Bryan Shalloway (@brshallo) <a href="https://twitter.com/brshallo/status/1272411480193974273?ref_src=twsrc%5Etfw">June 15, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+*Tweet about `widyr`:*
+
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Will add `widyr` to my set of tools for tidy pairwise operations: <a href="https://t.co/NSxNC3nehK">https://t.co/NSxNC3nehK</a> !<br><br>Seems to overlap some w/ tidymodels, eg `corrr`📦 (<a href="https://twitter.com/thisisdaryn?ref_src=twsrc%5Etfw">@thisisdaryn</a> ) or could imagine widely_kmeans() as a `recipe`/`embed` step...<a href="https://twitter.com/drob?ref_src=twsrc%5Etfw">@drob</a> any tips on when/how you use these in combination? <a href="https://t.co/dAsJtNW7Vo">https://t.co/dAsJtNW7Vo</a></p>&mdash; Bryan Shalloway (@brshallo) <a href="https://twitter.com/brshallo/status/1313966803488583686?ref_src=twsrc%5Etfw">October 7, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 ## Session info
 
 ```{r}
